Compatible with Feishin v1.1.0 (#47)
* enable duration of playlist

* Update qm-music-parent/qm-music-app/src/main/java/com/github/chenqimiao/qmmusic/app/controller/subsonic/PlaylistsController.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update qm-music-parent/qm-music-core/src/main/java/com/github/chenqimiao/qmmusic/core/service/complex/impl/SubsonicPlaylistComplexServiceImpl.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update qm-music-parent/qm-music-dao/src/main/java/com/github/chenqimiao/qmmusic/dao/DO/PlaylistItemDO.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update qm-music-parent/qm-music-core/src/main/java/com/github/chenqimiao/qmmusic/core/service/complex/impl/SubsonicPlaylistComplexServiceImpl.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Update qm-music-parent/qm-music-core/src/main/java/com/github/chenqimiao/qmmusic/core/service/impl/SubsonicPlaylistServiceImpl.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* rename some vals

* rename some vals

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>