@@ -3,12 +3,15 @@ package com.github.chenqimiao.qmmusic.core.service.complex.impl;
 import com.github.chenqimiao.qmmusic.core.dto.*;
 import com.github.chenqimiao.qmmusic.core.request.UpdatePlaylistRequest;
 import com.github.chenqimiao.qmmusic.core.service.PlaylistService;
+import com.github.chenqimiao.qmmusic.core.service.SongService;
 import com.github.chenqimiao.qmmusic.core.service.complex.PlaylistComplexService;
 import com.github.chenqimiao.qmmusic.core.service.complex.SongComplexService;
 import com.github.chenqimiao.qmmusic.dao.DO.PlaylistItemDO;
 import com.github.chenqimiao.qmmusic.dao.repository.PlaylistItemRepository;
 import com.github.chenqimiao.qmmusic.dao.repository.PlaylistRepository;
+import com.google.common.collect.Lists;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.math.NumberUtils;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -39,6 +42,8 @@ public class SubsonicPlaylistComplexServiceImpl implements PlaylistComplexServic
 
     @Autowired
     private PlaylistItemRepository playlistItemRepository;
+    @Autowired
+    private SongService songService;
 //
 //    @Autowired
 //    private TransactionTemplate transactionTemplate;
@@ -103,8 +108,10 @@ public class SubsonicPlaylistComplexServiceImpl implements PlaylistComplexServic
 
 
         if (songId != null) {
-
-            playlistService.saveSongToPlaylist(songId, userId, playlistDTO.getId());
+            SongDTO songDTO = songService.queryBySongId(songId);
+            if (songDTO != null) {
+                playlistService.saveSongToPlaylist(songId, songDTO.getDuration(), userId, playlistDTO.getId());
+            }
         }
 
         return playlistDTO.getId();
@@ -122,21 +129,24 @@ public class SubsonicPlaylistComplexServiceImpl implements PlaylistComplexServic
     @Transactional
     public void updatePlaylist(UpdatePlaylistRequest updatePlaylistRequest) {
         Long playlistId = updatePlaylistRequest.getPlaylistId();
-        List<Long> songIdToAdd = updatePlaylistRequest.getSongIdToAdd();
-        if (CollectionUtils.isNotEmpty(songIdToAdd)) {
-            songIdToAdd.stream().forEach(songId -> {
+        List<Long> songIdsToAdd = updatePlaylistRequest.getSongIdsToAdd();
+        if (CollectionUtils.isNotEmpty(songIdsToAdd)) {
+            songIdsToAdd.forEach(songId -> {
                 PlaylistItemDO playlistItem = new PlaylistItemDO();
                 playlistItem.setPlaylist_id(playlistId);
                 playlistItem.setSong_id(songId);
                 playlistItemRepository.save(playlistItem);
             });
         }
-        List<Long> songIndexToRemove = updatePlaylistRequest.getSongIndexToRemove();
+        List<Long> songIndexToRemove = updatePlaylistRequest.getSongIndexesToRemove();
+        List<Long> songIdsToRemove = Lists.newArrayList();
         if (CollectionUtils.isNotEmpty(songIndexToRemove)) {
+            List<PlaylistItemDO> playlistItemsToRemove = playlistItemRepository.queryByPlaylistIdAndIndexes(playlistId, songIndexToRemove);
+            songIdsToRemove.addAll(playlistItemsToRemove.stream().map(PlaylistItemDO::getSong_id).toList());
             playlistItemRepository.deleteByPlaylistIdAndPositionIndex(playlistId, songIndexToRemove);
         }
 
-        int incrNum = CollectionUtils.size(songIdToAdd) - CollectionUtils.size(songIndexToRemove);
+        int incrNum = CollectionUtils.size(songIdsToAdd) - CollectionUtils.size(songIndexToRemove);
 
         if (incrNum != 0) {
             playlistRepository.incrSongCount(playlistId, incrNum);
@@ -147,18 +157,78 @@ public class SubsonicPlaylistComplexServiceImpl implements PlaylistComplexServic
         String description = updatePlaylistRequest.getDescription();
 
         if (name != null || description != null || visibility != null
-                || CollectionUtils.isNotEmpty(songIdToAdd)) {
-            Map<String, Object> paramMap = new HashMap<String, Object>();
+                || CollectionUtils.isNotEmpty(songIdsToAdd)) {
+            Map<String, Object> paramMap = new HashMap<>();
             paramMap.put("playlistId", playlistId);
             paramMap.put("name", name);
             paramMap.put("description", description);
             paramMap.put("visibility", visibility);
-            paramMap.put("coverArt", songIdToAdd.getLast());
+            Long coverArt = CollectionUtils.isNotEmpty(songIdsToAdd)
+                    ? songIdsToAdd.get(songIdsToAdd.size() - 1)
+                    : null;
+            paramMap.put("coverArt", coverArt);
             playlistRepository.updateByPlaylistId(paramMap);
         }
 
+        int durationToRemove = songService.sumDurationBySongIds(songIdsToRemove);
 
+        int durationToAdd = songService.sumDurationBySongIds(songIdsToAdd);
 
+        int durationToIncr = durationToAdd - durationToRemove;
+
+        if (durationToIncr != NumberUtils.INTEGER_ZERO) {
+
+            playlistRepository.incrDuration(playlistId, durationToIncr);
+
+        }
+
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void deleteItemsBySongIds(List<Long> songIds) {
+        List<PlaylistItemDO> playlistItems = playlistItemRepository.queryBySongIds(songIds);
+        if (CollectionUtils.isEmpty(playlistItems)) {
+            return;
+        }
+        Map<Long, Long> songCountMap =
+                playlistItems.stream().collect(Collectors.groupingBy(PlaylistItemDO::getPlaylist_id, Collectors.counting()));
+
+        // 更新歌单歌曲数量
+        songCountMap.forEach((k, v) -> {
+            playlistRepository.incrSongCount(k, -v.intValue());
+        });
+
+        playlistItemRepository.delBySongIds(songIds);
+
+        Map<Long, List<Long>> durationToReduceMap =
+                playlistItems.stream().collect(Collectors.groupingBy(PlaylistItemDO::getPlaylist_id,
+                        Collectors.mapping(PlaylistItemDO::getSong_id, Collectors.toList())
+                ));
+
+        // 更新歌单时长
+        durationToReduceMap.forEach((k, v) -> {
+
+            int durationToReduce = songService.sumDurationBySongIds(v);
+
+            if (Objects.equals(durationToReduce, NumberUtils.INTEGER_ZERO)) {
+                return;
+            }
+            playlistRepository.incrDuration(k, -durationToReduce);
+
+        });
+
+        // 刷新歌单封面
+        playlistItems.stream().map(PlaylistItemDO::getPlaylist_id).distinct().forEach(playlistId -> {
+            playlistItemRepository.queryByPlaylistIdAndIndexes(playlistId, Lists.newArrayList(NumberUtils.LONG_ZERO)).stream()
+                    .findFirst()
+                    .ifPresent(item -> {
+                        Map<String, Object> paramMap = new HashMap<>();
+                        paramMap.put("playlistId", playlistId);
+                        paramMap.put("coverArt", item.getSong_id());
+                        playlistRepository.updateByPlaylistId(paramMap);
+                    });
+        });
     }
 
 }
